--- a/Pen/Redline.html
+++ b/Pen/Redline.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-	Maps and stuff:
+	HOLC map of Boston
 <div id="mapid"></div>
 	<script>
 	  var mymap = L.map('mapid').setView([42.2991354,-71.1063362], 11);
